--- a/index.html
+++ b/index.html
@@ -5,106 +5,52 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Piel de Seda</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <style>
-    body { font-family: 'Montserrat', sans-serif; margin: 0; padding: 0; background-color: #fff9f8; color: #333; }
-    header { background-color: #ffe4e1; padding: 2.5rem 1rem; text-align: center; }
-    header h1 { font-size: 2.5rem; margin-bottom: 0.5rem; }
-    header p { font-size: 1.1rem; }
-    .button { display: inline-block; background-color: #ff69b4; color: white; padding: 1rem 2rem; margin-top: 1.5rem; border-radius: 25px; text-decoration: none; font-weight: bold; }
-    .section { padding: 2rem; max-width: 1000px; margin: auto; }
-    .products { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
-    .product-card { background: white; border-radius: 12px; padding: 1rem; box-shadow: 0 2px 6px rgba(0,0,0,0.1); text-align: center; width: 220px; }
-    .product-card img { border-radius: 8px; height: 150px; object-fit: cover; margin-bottom: 0.5rem; }
-    .product-card .actions { display: flex; flex-direction: column; gap: 0.5rem; margin-top: 1rem; }
-    .product-card .actions a { background-color: #ff69b4; color: white; padding: 0.5rem; border-radius: 10px; text-decoration: none; font-weight: 600; }
-    .banner img { width: 100%; border-radius: 12px; margin: 2rem 0; }
-    .ads { display: flex; flex-wrap: wrap; gap: 1rem; justify-content: center; }
-    .ads img { width: 300px; border-radius: 12px; }
-    ul { list-style: none; padding-left: 0; }
-    ul li::before { content: '✔️'; margin-right: 0.5rem; color: #ff69b4; }
-    blockquote { font-style: italic; background-color: #fff0f5; padding: 1rem; border-left: 4px solid #ff69b4; margin: 1rem 0; }
-    footer { text-align: center; font-size: 0.9rem; padding: 1rem; background-color: #ffe4e1; }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background-color: #fffafc; }
+    header { background-color: #ffdde4; padding: 20px; text-align: center; }
+    header h1 { margin: 0; color: #cc0066; }
+    .hero img { width: 100%; max-height: 400px; object-fit: cover; }
+    .section { padding: 20px; }
+    .section img { max-width: 100%; height: auto; border-radius: 10px; margin-bottom: 15px; }
+    .button { display: inline-block; background-color: #cc0066; color: white; padding: 10px 20px; text-decoration: none; border-radius: 8px; margin-top: 10px; }
+    .product { margin-bottom: 40px; }
   </style>
 </head>
 <body>
-  <header>
-    <h1>Piel de Seda</h1>
-    <p>Belleza que se siente. Resultados que se notan.</p>
-    <a class="button" href="https://wa.me/573207319144" target="_blank">Haz tu pedido por WhatsApp</a>
-  </header>
 
-  <section class="section banner">
-    <img src="images/banner1.png" alt="Banner cuidado íntimo">
-  </section>
+<header>
+  <h1>Piel de Seda</h1>
+  <p>Productos de belleza para realzar tu esencia</p>
+</header>
 
-  <section class="section">
-    <h2>Productos Destacados</h2>
-    <div class="products">
-      <div class="product-card">
-        <img src="images/softserve.jpeg" alt="Soft Serve y Coco Cloud">
-        <p>Soft Serve & Coco Cloud - Truly</p>
-        <div class="actions">
-          <a href="#">Agregar al carrito</a>
-          <a href="https://wa.me/573207319144?text=Hola! Quiero el producto Soft Serve & Coco Cloud - Truly" target="_blank">Comprar por WhatsApp</a>
-        </div>
-      </div>
-      <div class="product-card">
-        <img src="images/unicornfruit.jpeg" alt="Unicorn Fruit y Glazed Donut">
-        <p>Unicorn Fruit & Glazed Donut - Truly</p>
-        <div class="actions">
-          <a href="#">Agregar al carrito</a>
-          <a href="https://wa.me/573207319144?text=Hola! Quiero el producto Unicorn Fruit & Glazed Donut - Truly" target="_blank">Comprar por WhatsApp</a>
-        </div>
-      </div>
-      <div class="product-card">
-        <img src="images/mammouth1.jpeg" alt="Mammouth Crema Voluminizante">
-        <p>Mammouth Crema Voluminizante</p>
-        <div class="actions">
-          <a href="#">Agregar al carrito</a>
-          <a href="https://wa.me/573207319144?text=Hola! Quiero el producto Mammouth Crema Voluminizante" target="_blank">Comprar por WhatsApp</a>
-        </div>
-      </div>
-    </div>
-  </section>
+<div class="hero">
+  <img src="banner_principal.png" alt="Cuidado de la piel">
+</div>
 
-  <section class="section">
-    <h2>Publicidad Destacada - 2 Minute</h2>
-    <div class="ads">
-      <img src="images/ads_2min_1.jpeg" alt="Modo de uso 2 Minute">
-      <img src="images/ads_2min_2.jpeg" alt="Resultado instantáneo">
-      <img src="images/ads_2min_3.jpeg" alt="Reductor de arrugas">
-    </div>
-  </section>
+<div class="section">
+  <div class="product">
+    <h2>2 Minute Wrinkle Reducer</h2>
+    <img src="uso_2minute.jpg" alt="Uso 2 minute">
+    <p>Reduce visiblemente las arrugas en solo dos minutos. Ideal para uso diario.</p>
+    <a class="button" href="https://wa.me/573207319144?text=Hola!%20Estoy%20interesada%20en%20el%202%20Minute%20Wrinkle%20Reducer">Comprar por WhatsApp</a>
+  </div>
 
-  <section class="section">
-    <h2>Publicidad Extra - Mammouth</h2>
-    <div class="ads">
-      <img src="images/mammouth2.jpeg" alt="Mammouth 1">
-      <img src="images/mammouth3.jpeg" alt="Mammouth 2">
-      <img src="images/mammouth4.jpeg" alt="Mammouth 3">
-    </div>
-  </section>
+  <div class="product">
+    <h2>Truly Beauty</h2>
+    <img src="truly1.jpg" alt="Truly producto 1">
+    <img src="truly2.jpg" alt="Truly producto 2">
+    <p>Cosméticos innovadores y cruelty-free para el cuidado del cuerpo y rostro.</p>
+    <a class="button" href="https://wa.me/573207319144?text=Hola!%20Quiero%20saber%20más%20sobre%20los%20productos%20Truly">Comprar por WhatsApp</a>
+  </div>
 
-  <section class="section">
-    <h2>¿Por qué elegirnos?</h2>
-    <ul>
-      <li>Productos 100% originales</li>
-      <li>Distribuimos marcas como 2 Minute, Truly y Mammouth</li>
-      <li>Asesoría personalizada y atención rápida</li>
-      <li>Pago online o contraentrega (el cliente paga el envío)</li>
-      <li>Envíos a toda Colombia</li>
-    </ul>
-  </section>
+  <div class="product">
+    <h2>Mammouth Skin</h2>
+    <img src="mammouth1.jpg" alt="Mammouth producto 1">
+    <img src="mammouth2.jpg" alt="Mammouth producto 2">
+    <p>Línea masculina con fórmulas efectivas para la piel del hombre.</p>
+    <a class="button" href="https://wa.me/573207319144?text=Hola!%20Estoy%20interesado%20en%20los%20productos%20Mammouth">Comprar por WhatsApp</a>
+  </div>
+</div>
 
-  <section class="section">
-    <h2>Opiniones de Clientes</h2>
-    <blockquote>"Todo llegó perfecto y el producto me encantó. ¡Gracias Piel de Seda!"</blockquote>
-    <blockquote>"Excelente atención, me asesoraron muy bien y llegó súper rápido."</blockquote>
-  </section>
-
-  <footer>
-    Síguenos en Instagram: @pieldeseda • WhatsApp: 320 731 9144
-  </footer>
 </body>
 </html>
